--- a/CSS/app.css
+++ b/CSS/app.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-    width: 1216px;
+    max-width: 100%;
     /* background-color: red; */
     margin-left: auto;
     margin-right: auto;
@@ -136,4 +136,5 @@ body {
     width: 22px;
     height: 22px;
     color: #FFEB3B;
+
 }
