--- a/CSS/app.css
+++ b/CSS/app.css
@@ -54,7 +54,7 @@ body {
 }
 
 .product-image {
-    width: 100%;
+    width: 200px%;
 }
 
 .product-name {
@@ -138,3 +138,4 @@ body {
     color: #FFEB3B;
 
 }
+
